--- a/form.html
+++ b/form.html
@@ -62,6 +62,9 @@ input, textarea, select{
   font-size:16px;
   font-weight:bold;
 }
+.submit-btn:disabled{
+  background:#999;
+}
 .photo-btn{
   margin-top:8px;
   width:100%;
@@ -73,15 +76,26 @@ input, textarea, select{
   font-weight:bold;
 }
 #preview img{
-  width:80px;
-  height:80px;
-  object-fit:cover;
-  border-radius:6px;
-  margin:5px;
+  width:100%;
+  max-height:300px;
+  object-fit:contain;
+  border-radius:8px;
+  margin-top:10px;
 }
 #qr-reader{
   display:none;
   margin-top:10px;
+}
+.asset-box{
+  border:1px solid #ddd;
+  padding:12px;
+  border-radius:8px;
+  margin-top:10px;
+  background:#fafafa;
+}
+.status-text{
+  margin-top:10px;
+  font-weight:bold;
 }
 </style>
 </head>
@@ -99,17 +113,19 @@ input, textarea, select{
 <select id="asset_id"></select>
 <button type="button" onclick="openQRScanner()">📷 Scan Asset QR</button>
 
-<div id="assetDetail" style="display:none;border:1px solid #ddd;padding:12px;border-radius:8px;margin-top:10px;">
+<div id="assetDetail" class="asset-box" style="display:none;">
   <div><b>ชื่อเครื่อง:</b> <span id="d_name"></span></div>
   <div><b>ประเภท:</b> <span id="d_class"></span></div>
   <div><b>กำลังไฟ:</b> <span id="d_kw"></span> kW / <span id="d_hp"></span> HP</div>
   <div><b>Line:</b> <span id="d_line"></span></div>
   <div><b>Location:</b> <span id="d_location"></span></div>
   <div><b>Status:</b> <span id="d_status"></span></div>
+  <div style="margin-top:6px;"><b>รายละเอียด:</b></div>
+  <div id="d_desc" style="white-space:pre-wrap;"></div>
 </div>
 
 <div id="qr-reader"></div>
-<button id="closeQR" onclick="closeQR()" style="display:none;">❌ Close Scanner</button>
+<button id="closeQR" style="display:none;" onclick="closeQR()">❌ Close Scanner</button>
 
 <label>Line</label>
 <select id="line">
@@ -119,7 +135,7 @@ input, textarea, select{
 </select>
 
 <label>Problem</label>
-<textarea id="problem"></textarea>
+<textarea id="problem" placeholder="อธิบายอาการ / ปัญหาที่พบ"></textarea>
 
 <label>Priority</label>
 <select id="priority">
@@ -138,13 +154,14 @@ input, textarea, select{
 <label>Phone</label>
 <input type="tel" id="phone"/>
 
-<label>Photo (max 4)</label>
+<label>Photo (หน้างานจริง, max 4)</label>
 <button type="button" class="photo-btn" onclick="takePhoto()">📸 Take Photo</button>
 <div id="photo-count">0 / 4</div>
 <input type="file" id="cameraInput" accept="image/*" capture="environment" style="display:none"/>
 <div id="preview"></div>
 
-<button class="submit-btn" onclick="submitWO()">Submit Work Order</button>
+<button id="submitBtn" class="submit-btn" onclick="submitWO()">Submit Work Order</button>
+<div id="status" class="status-text"></div>
 
 </div>
 
@@ -153,6 +170,7 @@ input, textarea, select{
  CONFIG
 ============================== */
 const API_URL = "https://script.google.com/macros/s/AKfycbzRfWNIS9k7psXzY8Zi_YThivvrvEtzSx4RfV8_GeeRQQ_1yRN3DA6R6E3VDFU5xJAmHQ/exec";
+const el = id => document.getElementById(id);
 
 /* ==============================
  NAV
@@ -162,12 +180,12 @@ function goHome(){
 }
 
 /* ==============================
- LOAD ASSET DROPDOWN
+ LOAD ASSET LIST
 ============================== */
 fetch(API_URL + "?mode=asset")
 .then(r => r.json())
 .then(list => {
-  const sel = document.getElementById("asset_id");
+  const sel = el("asset_id");
   sel.innerHTML = `<option value="">-- Select Asset --</option>`;
   list.forEach(id=>{
     const o=document.createElement("option");
@@ -182,25 +200,25 @@ fetch(API_URL + "?mode=asset")
 ============================== */
 async function loadAssetDetail(assetId){
   if(!assetId){
-    assetDetail.style.display="none";
+    el("assetDetail").style.display="none";
     return;
   }
   const r = await fetch(API_URL+"?mode=assetDetail&asset_id="+encodeURIComponent(assetId));
   const a = await r.json();
   if(a.error) return;
 
-  assetDetail.style.display="block";
-  d_name.innerText = a.asset_name;
-  d_class.innerText = a.asset_class;
-  d_kw.innerText = a.kw;
-  d_hp.innerText = a.hp;
-  d_line.innerText = a.line;
-  d_location.innerText = a.location;
-  d_status.innerText = a.status;
+  el("assetDetail").style.display="block";
+  el("d_name").innerText = a.asset_name || "";
+  el("d_class").innerText = a.asset_class || "";
+  el("d_kw").innerText = a.kw || "";
+  el("d_hp").innerText = a.hp || "";
+  el("d_line").innerText = a.line || "";
+  el("d_location").innerText = a.location || "";
+  el("d_status").innerText = a.status || "";
+  el("d_desc").innerText = a.description || "";
 }
-
-asset_id.addEventListener("change",function(){
-  loadAssetDetail(this.value);
+el("asset_id").addEventListener("change",e=>{
+  loadAssetDetail(e.target.value);
 });
 
 /* ==============================
@@ -208,19 +226,19 @@ asset_id.addEventListener("change",function(){
 ============================== */
 let qr;
 function openQRScanner(){
+  el("qr-reader").style.display="block";
+  el("closeQR").style.display="block";
   qr = new Html5Qrcode("qr-reader");
   qr.start({facingMode:"environment"},{fps:10,qrbox:250},txt=>{
-    asset_id.value = txt.trim();
+    el("asset_id").value = txt.trim();
     loadAssetDetail(txt.trim());
     closeQR();
   });
-  qr-reader.style.display="block";
-  closeQR.style.display="block";
 }
 function closeQR(){
-  if(qr) qr.stop();
-  qr-reader.style.display="none";
-  closeQR.style.display="none";
+  if(qr){ qr.stop().catch(()=>{}); qr=null; }
+  el("qr-reader").style.display="none";
+  el("closeQR").style.display="none";
 }
 
 /* ==============================
@@ -228,59 +246,75 @@ function closeQR(){
 ============================== */
 let images=[];
 const maxPhotos=4;
-
 function takePhoto(){
   if(images.length>=maxPhotos){
-    alert("ครบ 4 รูปแล้ว");
+    alert("ถ่ายได้สูงสุด 4 รูป");
     return;
   }
-  cameraInput.click();
+  el("cameraInput").click();
 }
-
-cameraInput.addEventListener("change",()=>{
-  const file=cameraInput.files[0];
+el("cameraInput").addEventListener("change",()=>{
+  const file = el("cameraInput").files[0];
   if(!file) return;
   const r=new FileReader();
   r.onload=()=>{
     images.push(r.result);
     const img=document.createElement("img");
     img.src=r.result;
-    preview.appendChild(img);
-    photo-count.innerText=images.length+" / "+maxPhotos;
+    el("preview").appendChild(img);
+    el("photo-count").innerText = images.length+" / "+maxPhotos;
   };
   r.readAsDataURL(file);
 });
 
 /* ==============================
- SUBMIT (เวอร์ชันเดิม)
+ SUBMIT (✔ FIXED)
 ============================== */
 async function submitWO(){
+  if(!el("asset_id").value || !el("problem").value){
+    alert("กรุณาเลือก Asset และกรอก Problem");
+    return;
+  }
+
+  el("submitBtn").disabled = true;
+  el("status").innerText = "⏳ กำลังส่งข้อมูล...";
+
   const payload={
-    asset_id:asset_id.value,
-    line:line.value,
-    problem:problem.value,
-    priority:priority.value,
-    owner:owner.value,
-    email:email.value,
-    phone:phone.value,
+    asset_id:el("asset_id").value,
+    line:el("line").value,
+    problem:el("problem").value,
+    priority:el("priority").value,
+    owner:el("owner").value,
+    email:el("email").value,
+    phone:el("phone").value,
     images:images
   };
 
-  const r = await fetch(API_URL,{
-    method:"POST",
-    body:JSON.stringify(payload)
-  });
-  const d = await r.json();
+  try{
+    const r = await fetch(API_URL,{
+      method:"POST",
+      body:JSON.stringify(payload)   // ❗ ไม่มี headers
+    });
 
-  if(d.status==="success"){
-    alert("Created "+d.wo_id);
-    location.reload();
-  }else{
-    alert("Error");
+    const text = await r.text();
+    const d = JSON.parse(text);
+
+    if(d.status==="success"){
+      alert("✅ Created "+d.wo_id);
+      location.reload();
+    }else{
+      alert("❌ GAS Error\n"+text);
+      el("submitBtn").disabled=false;
+      el("status").innerText="";
+    }
+  }catch(err){
+    console.error(err);
+    alert("❌ Network / GAS Error\n"+err.message);
+    el("submitBtn").disabled=false;
+    el("status").innerText="";
   }
 }
 </script>
 
 </body>
 </html>
-
