--- a/form.html
+++ b/form.html
@@ -149,15 +149,15 @@ input, textarea, select{
 <select id="owner">
   <option value="">-- Select Owner --</option>
   <option value="MTN">MTN – Maintenance</option>
-  <option value="EL">EL – Electrical</option>
-  <option value="MC">MC – Mechanical</option>
-  <option value="UTL">UTL – Utility</option>
+  <option value="ADC">ADC – administration center</option>
+  <option value="FAD">FAD – Factory Administration</option>
+  <option value="CTC">CTC – canteen center</option>
   <option value="PRD">PRD – Production</option>
-  <option value="QC">QC – Quality Control</option>
-  <option value="QA">QA – Quality Assurance</option>
-  <option value="SAN">SAN – Sanitation</option>
+  <option value="QC_">QC_ – Quality Control</option>
+  <option value="QA_">QA_ – Quality Assurance</option>
+  <option value="WH5">WH5 – Warehouse 5,29,32</option>
   <option value="HSE">HSE – Safety</option>
-  <option value="WH">WH – Warehouse</option>
+  <option value="WHA">WHA – Warehouse production</option>
 </select>
 
 <label>Email</label>
