--- a/form.html
+++ b/form.html
@@ -160,6 +160,9 @@ input, textarea, select{
   <option value="WHA">WHA – Warehouse production</option>
 </select>
 
+<label>Owner_name</label>
+<input type="Owner_name" id="Owner_name"/>
+  
 <label>Email</label>
 <input type="email" id="email"/>
 
