--- a/form.html
+++ b/form.html
@@ -160,14 +160,14 @@ input, textarea, select{
   <option value="WHA">WHA – Warehouse production</option>
 </select>
 
-  <label>Owner_name</label>
-<input id="owner_name" placeholder="ชื่อผู้แจ้งงาน">
+  <label>OWNER_NAME</label>
+<input id="OWNER_NAME" placeholder="ชื่อผู้แจ้งงาน">
   
 <label>Email</label>
 <input type="email" id="email"/>
 
-<label>Phone</label>
-<input type="tel" id="phone"/>
+<label>PHONE</label>
+<input type="tel" id="PHONE"/>
 
 <label>Photo (หน้างานจริง, max 4)</label>
 <button type="button" class="photo-btn" onclick="takePhoto()">📸 Take Photo</button>
