--- a/job_status.html
+++ b/job_status.html
@@ -1,78 +1,183 @@
 <!DOCTYPE html>
-<html>
+<html lang="th">
 <head>
-<meta charset="UTF-8">
-<title>Job Status</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Job Status – Technician</title>
+
 <style>
-body{font-family:Arial;background:#f4f6f8;padding:20px}
-.header{
-  background:#1f3c88;color:#fff;
-  padding:14px;border-radius:10px;
-  display:flex;align-items:center;gap:12px
+body{
+  font-family: Arial, sans-serif;
+  background:#f4f6f8;
+  margin:0;
+  padding:20px;
 }
-.table{
-  margin-top:20px;
-  background:#fff;border-radius:12px;
-  overflow:hidden
+
+/* ================= HEADER ================= */
+.top-nav{
+  display:flex;
+  align-items:center;
+  gap:12px;
+  background:#1f3c88;
+  color:#fff;
+  padding:14px 20px;
+  border-radius:10px;
+  margin-bottom:20px;
 }
-.row,.head{
-  display:grid;
-  grid-template-columns: 160px 120px 1fr 120px 100px;
-  padding:12px
+.top-nav button{
+  background:#fff;
+  color:#1f3c88;
+  border:none;
+  padding:6px 12px;
+  border-radius:6px;
+  font-weight:bold;
+  cursor:pointer;
 }
-.head{background:#1f3c88;color:#fff;font-weight:bold}
-.row{border-bottom:1px solid #eee}
-.empty{padding:40px;text-align:center;color:#888}
+
+/* ================= CARD ================= */
+.card{
+  background:#fff;
+  border-radius:12px;
+  padding:20px;
+  max-width:1000px;
+  margin:auto;
+}
+
+/* ================= TABLE ================= */
+table{
+  width:100%;
+  border-collapse:collapse;
+}
+th, td{
+  padding:12px 10px;
+  border-bottom:1px solid #e0e0e0;
+  text-align:left;
+  font-size:14px;
+}
+th{
+  background:#1f3c88;
+  color:#fff;
+  font-weight:bold;
+}
+tr:hover{
+  background:#f9fafc;
+}
+
+/* ================= STATUS TAG ================= */
+.tag{
+  padding:4px 10px;
+  border-radius:20px;
+  font-size:12px;
+  font-weight:bold;
+  display:inline-block;
+}
+.OPEN{ background:#ffeb3b; color:#000; }
+.IN_PROGRESS{ background:#03a9f4; color:#fff; }
+.DONE{ background:#4caf50; color:#fff; }
+
+/* ================= LOADING / EMPTY ================= */
+.center{
+  text-align:center;
+  padding:30px;
+  color:#666;
+}
+.spinner{
+  width:40px;
+  height:40px;
+  border:4px solid #ddd;
+  border-top:4px solid #1f3c88;
+  border-radius:50%;
+  animation:spin 1s linear infinite;
+  margin:20px auto;
+}
+@keyframes spin{
+  to{ transform:rotate(360deg); }
+}
 </style>
 </head>
 
 <body>
 
-<div class="header">
-  <button onclick="location.href='index.html'">⬅ Home</button>
-  <b>Technician – Job Status</b>
+<!-- ================= HEADER ================= -->
+<div class="top-nav">
+  <button onclick="goHome()">⬅ Home</button>
+  <b>🛠 Technician – Job Status</b>
 </div>
 
-<div class="table">
-  <div class="head">
-    <div>WO ID</div>
-    <div>Asset</div>
-    <div>Problem</div>
-    <div>Priority</div>
-    <div>Status</div>
+<!-- ================= CONTENT ================= -->
+<div class="card">
+  <div id="loading" class="center">
+    <div class="spinner"></div>
+    กำลังโหลดข้อมูลงานค้าง...
   </div>
-  <div id="list"></div>
+
+  <div id="empty" class="center" style="display:none;">
+    🎉 ไม่มีงานค้างในระบบ
+  </div>
+
+  <table id="jobTable" style="display:none;">
+    <thead>
+      <tr>
+        <th>WO ID</th>
+        <th>Asset</th>
+        <th>Problem</th>
+        <th>Priority</th>
+        <th>Status</th>
+      </tr>
+    </thead>
+    <tbody id="jobBody"></tbody>
+  </table>
 </div>
 
 <script>
-const API = "https://script.google.com/macros/s/AKfycbzRfWNIS9k7psXzY8Zi_YThivvrvEtzSx4RfV8_GeeRQQ_1yRN3DA6R6E3VDFU5xJAmHQ/exec";
+/* ================= CONFIG ================= */
+const API_URL = "https://script.google.com/macros/s/AKfycbzPlxZPUvYTiiVPhum7JDbarfIfbpZ2c8_tJa7AZb4OypRJwFB171oC-UqpDdkKMdEhSA/exec";
 
-fetch(API + "?mode=jobStatus")
-.then(r=>r.json())
-.then(rows=>{
-  const box = document.getElementById("list");
-  if(!rows.length){
-    box.innerHTML = `<div class="empty">🎉 ไม่มีงานค้างในระบบ</div>`;
-    return;
+/* ================= NAV ================= */
+function goHome(){
+  location.href = "https://airservicepcg-ux.github.io/CMMS/";
+}
+
+/* ================= LOAD JOB STATUS ================= */
+async function loadJobStatus(){
+  try{
+    const res = await fetch(API_URL + "?mode=jobStatus");
+    const data = await res.json();
+
+    document.getElementById("loading").style.display = "none";
+
+    if(!Array.isArray(data) || data.length === 0){
+      document.getElementById("empty").style.display = "block";
+      return;
+    }
+
+    const tbody = document.getElementById("jobBody");
+    tbody.innerHTML = "";
+
+    data.forEach(j=>{
+      const tr = document.createElement("tr");
+
+      tr.innerHTML = `
+        <td><b>${j.wo_id}</b></td>
+        <td>${j.asset_id}</td>
+        <td>${j.problem}</td>
+        <td>${j.priority}</td>
+        <td><span class="tag ${j.status}">${j.status}</span></td>
+      `;
+
+      tbody.appendChild(tr);
+    });
+
+    document.getElementById("jobTable").style.display = "table";
+
+  }catch(err){
+    document.getElementById("loading").innerText = "❌ โหลดข้อมูลไม่สำเร็จ";
+    console.error(err);
   }
+}
 
-  rows.forEach(r=>{
-    const div=document.createElement("div");
-    div.className="row";
-    div.innerHTML=`
-      <div>${r.wo_id}</div>
-      <div>${r.asset_id}</div>
-      <div>${r.problem}</div>
-      <div>${r.priority}</div>
-      <div>${r.status}</div>
-    `;
-    box.appendChild(div);
-  });
-})
-.catch(()=>{
-  document.getElementById("list").innerHTML =
-    `<div class="empty">❌ Load failed</div>`;
-});
+/* ================= INIT ================= */
+loadJobStatus();
 </script>
 
 </body>
