--- a/job_status.html
+++ b/job_status.html
@@ -6,175 +6,139 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body{
-  font-family: Arial, sans-serif;
-  background:#f4f6f9;
-  margin:0;
-}
-.header{
-  background:#1f3c88;
-  color:#fff;
-  padding:16px 20px;
-  font-size:22px;
-  font-weight:bold;
-  border-radius:0 0 14px 14px;
-}
-.container{
-  max-width:1200px;
-  margin:20px auto;
-  padding:0 16px;
-}
-.filter-bar{
+body{font-family:Arial;background:#f4f6f9;margin:0}
+header{background:#1f3c88;color:#fff;padding:16px;font-size:20px;font-weight:bold}
+.container{max-width:1200px;margin:20px auto;padding:0 16px}
+
+.filters{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(160px,1fr));
-  gap:10px;
-  margin-bottom:12px;
+  gap:10px;margin-bottom:12px
 }
-.filter-bar input, .filter-bar select{
-  padding:8px;
-  border-radius:6px;
-  border:1px solid #ccc;
+.filters input,.filters select{
+  padding:8px;border-radius:6px;border:1px solid #ccc
 }
-table{
-  width:100%;
-  border-collapse:collapse;
-  background:#fff;
-  border-radius:12px;
-  overflow:hidden;
+
+table{width:100%;border-collapse:collapse;background:#fff;border-radius:10px;overflow:hidden}
+th{background:#1f3c88;color:#fff;padding:10px;text-align:left}
+td{padding:10px;border-bottom:1px solid #eee}
+
+.badge{
+  padding:4px 10px;border-radius:12px;font-weight:bold;font-size:12px
 }
-thead{
-  background:#1f3c88;
-  color:#fff;
-}
-th, td{
-  padding:12px;
-  border-bottom:1px solid #eee;
-  text-align:left;
-}
-.status{
-  padding:6px 12px;
-  border-radius:20px;
-  font-weight:bold;
-  font-size:13px;
-}
-.OPEN{ background:#ffeb3b; }
-.IN_PROGRESS{ background:#90caf9; }
-button{
-  padding:6px 10px;
-  border:none;
-  border-radius:6px;
-  cursor:pointer;
-}
-.pdf-btn{
-  background:#4caf50;
-  color:#fff;
-}
-.empty{
-  text-align:center;
-  padding:20px;
-  color:#666;
+.OPEN{background:#ffeb3b}
+.IN_PROGRESS{background:#03a9f4;color:#fff}
+.CLOSED{background:#4caf50;color:#fff}
+
+.btn{
+  padding:6px 10px;border-radius:6px;border:none;
+  background:#1f3c88;color:#fff;cursor:pointer
 }
 </style>
 </head>
 
 <body>
 
-<div class="header">
-  ← <a href="index.html" style="color:#fff;text-decoration:none;">Home</a>
-  &nbsp; 🔧 Technician – Job Status
-</div>
+<header>
+  ← <a href="index.html" style="color:#fff;text-decoration:none">Home</a>
+  &nbsp;&nbsp;🔧 Technician – Job Status
+</header>
 
 <div class="container">
 
-  <!-- FILTER -->
-  <div class="filter-bar">
-    <input placeholder="WO ID" oninput="applyFilter()">
-    <input placeholder="Asset" oninput="applyFilter()">
-    <input placeholder="Problem" oninput="applyFilter()">
-    <select onchange="applyFilter()">
-      <option value="">All Priority</option>
-      <option>Critical</option>
-      <option>High</option>
-      <option>Medium</option>
-      <option>Low</option>
-    </select>
-    <select onchange="applyFilter()">
-      <option value="">All Status</option>
-      <option>OPEN</option>
-      <option>IN_PROGRESS</option>
-    </select>
-  </div>
+<div class="filters">
+  <input id="f_wo" placeholder="WO ID">
+  <input id="f_asset" placeholder="Asset">
+  <input id="f_problem" placeholder="Problem">
+  <select id="f_priority">
+    <option value="">All Priority</option>
+    <option>Critical</option>
+    <option>High</option>
+    <option>Medium</option>
+    <option>Low</option>
+  </select>
+  <select id="f_status">
+    <option value="">All Status</option>
+    <option>OPEN</option>
+    <option>IN_PROGRESS</option>
+    <option>CLOSED</option>
+  </select>
+</div>
 
-  <!-- TABLE -->
-  <table>
-    <thead>
-      <tr>
-        <th>WO ID</th>
-        <th>Asset</th>
-        <th>Problem</th>
-        <th>Priority</th>
-        <th>Status</th>
-        <th>Action</th>
-      </tr>
-    </thead>
-    <tbody id="tbody">
-      <tr><td colspan="6" class="empty">⏳ Loading...</td></tr>
-    </tbody>
-  </table>
+<table>
+<thead>
+<tr>
+  <th>WO ID</th>
+  <th>Asset</th>
+  <th>Problem</th>
+  <th>Priority</th>
+  <th>Status</th>
+  <th>Action</th>
+</tr>
+</thead>
+<tbody id="tbody">
+<tr><td colspan="6">⏳ Loading...</td></tr>
+</tbody>
+</table>
 
 </div>
 
 <script>
-const API_URL = "https://script.googleusercontent.com/macros/echo?user_content_key=XXXX"; // 🔴 ใส่ของคุณ
-let rows = [];
+const API_URL = "https://script.google.com/macros/s/AKfycbzPlxZPUvYTiiVPhum7JDbarfIfbpZ2c8_tJa7AZb4OypRJwFB171oC-UqpDdkKMdEhSA/exec";
 
-fetch(API_URL + "&mode=jobStatus")
+let allJobs = [];
+
+const el = id => document.getElementById(id);
+
+fetch(API_URL + "?mode=jobStatus")
 .then(r=>r.json())
 .then(data=>{
-  rows = data;
-  render(rows);
+  allJobs = data;
+  render(allJobs);
 })
-.catch(()=>render([]));
+.catch(()=>{
+  el("tbody").innerHTML = `<tr><td colspan="6">❌ Load failed</td></tr>`;
+});
 
-function render(data){
-  const tb = document.getElementById("tbody");
-  if(!data.length){
-    tb.innerHTML = `<tr><td colspan="6" class="empty">ไม่มีงานค้าง</td></tr>`;
+function render(list){
+  if(!list.length){
+    el("tbody").innerHTML = `<tr><td colspan="6">ไม่มีงานค้าง</td></tr>`;
     return;
   }
-  tb.innerHTML = data.map(r=>`
+  el("tbody").innerHTML = list.map(j=>`
     <tr>
-      <td>${r.wo_id}</td>
-      <td>${r.asset_id}</td>
-      <td>${r.problem}</td>
-      <td>${r.priority}</td>
-      <td><span class="status ${r.status}">${r.status}</span></td>
+      <td><b>${j.wo_id}</b></td>
+      <td>${j.asset_id}</td>
+      <td>${j.problem}</td>
+      <td>${j.priority}</td>
+      <td><span class="badge ${j.status}">${j.status}</span></td>
       <td>
-        ${r.pdf_url
-          ? `<button class="pdf-btn" onclick="openPDF('${r.pdf_url}')">📄 PDF</button>`
-          : '-'}
+        ${j.pdf_url ? `<button class="btn" onclick="window.open('${j.pdf_url}')">📄 View PDF</button>` : "-"}
       </td>
     </tr>
   `).join("");
 }
 
-function applyFilter(){
-  const f = [...document.querySelectorAll(".filter-bar input, .filter-bar select")]
-    .map(e=>e.value.toLowerCase());
+document.querySelectorAll(".filters input,.filters select")
+.forEach(elm=>elm.addEventListener("input",filter));
 
-  render(rows.filter(r =>
-    (!f[0] || r.wo_id.toLowerCase().includes(f[0])) &&
-    (!f[1] || r.asset_id.toLowerCase().includes(f[1])) &&
-    (!f[2] || r.problem.toLowerCase().includes(f[2])) &&
-    (!f[3] || r.priority.toLowerCase()===f[3]) &&
-    (!f[4] || r.status.toLowerCase()===f[4])
+function filter(){
+  const wo = el("f_wo").value.toLowerCase();
+  const asset = el("f_asset").value.toLowerCase();
+  const prob = el("f_problem").value.toLowerCase();
+  const pri = el("f_priority").value;
+  const st = el("f_status").value;
+
+  render(allJobs.filter(j=>
+    (!wo || j.wo_id.toLowerCase().includes(wo)) &&
+    (!asset || j.asset_id.toLowerCase().includes(asset)) &&
+    (!prob || j.problem.toLowerCase().includes(prob)) &&
+    (!pri || j.priority===pri) &&
+    (!st || j.status===st)
   ));
-}
-
-function openPDF(url){
-  window.open(url, "_blank");
 }
 </script>
 
 </body>
 </html>
+
